# exotic_collections

./: .gitignore  pyproject.toml  pytest.ini
examples/: example.py
exotic_collections/: __init__.py
tests/: test_access_count_dict.py  test_bfs_iter.py  test_bijective_dict.py  test_dfs_iter.py  test_kdepth_dict.py
